--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </section> -->
     </header>
 
-    <section id="card" class="cardpage" style=" background: #530f70;">
+    <section id="card" class="cardpage" style=" background: #530f70;padding-bottom: 100px">
         <div class=" container">
             <h1 class="text-center text-white card-head">Revolutionize your gaming experience with Subway Ecosystem
             </h1>
@@ -179,12 +179,20 @@
         </div>
     </section>
 
-    <section class="principles" style=" background: #530f70;">
+    <section class="principles" style=" background: #530f70; padding: 100px 0">
         <div class="principles__container content-container">
             <h1 class="text-center text-white card-head">Revolutionize your gaming experience with Surfer Ecosystem
             </h1>
-            <div class="principles__scroll">
+            <div class="principles__scroll mt-5">
                 <div class="principles__list">
+                    <div class="principles__item">
+                        <h6 class="cardd-heading">Play-to-earn</h6>
+                        <p class="cardd-desc">Discover a new level of gaming excitement with Ether Surfers, where
+                            your skills and quick thinking can earn you real money. With its pulse-pounding gameplay
+                            and cutting-edge play-to-earn ecosystem, Ether Surfers is the perfect choice for gamers
+                            looking to turn their passion into profit. Download the app and join the revolution
+                            today.</p>
+                    </div>
                     <div class="principles__item">
                         <h6 class="cardd-heading">Staking Rewards</h6>
                         <p class="cardd-desc">By staking your SURFER tokens, you will be able to receive up to a 70%
@@ -198,16 +206,11 @@
                             and reliable platform, giving you peace of mind while you explore the thrilling world of
                     </div>
                     <div class="principles__item">
-                        <h6 class="cardd-heading">NFTs & Marketplace</h6>
-                        <p class="cardd-desc">Our multi-chain Surfer Marketplace will allow you to buy, sell, and
-                            trade NFTs and in-game assets directly. All transactions will be processed on a secure
-                            and reliable platform, giving you peace of mind while you explore the thrilling world of
-                    </div>
-                    <div class="principles__item">
-                        <h6 class="cardd-heading">NFTs & Marketplace</h6>
-                        <p class="cardd-desc">Our multi-chain Surfer Marketplace will allow you to buy, sell, and
-                            trade NFTs and in-game assets directly. All transactions will be processed on a secure
-                            and reliable platform, giving you peace of mind while you explore the thrilling world of
+                        <h6 class="cardd-heading">Multichain Bridge</h6>
+                        <p class="cardd-desc">The Surfer token will soon be connected to multiple blockchain
+                            networks, including Binance Chain, Arbitrum, and Optimism. This integration will provide
+                            users with the ability to directly trade Surfer tokens with native chain currencies,
+                            expanding its reach and increasing its exposure</p>
                     </div>
                     <div class="principles__item" style="background: transparent">
                     </div>
