--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         </div>
     </section>
 
-    <section class="principles" style=" background: #530f70; padding: 100px 0">
+    <section class="principles" style=" background: #530f70; padding: 150px 0">
         <div class="principles__container content-container">
             <h1 class="text-center text-white card-head">Revolutionize your gaming experience with Surfer Ecosystem
             </h1>
@@ -233,15 +233,15 @@
                             pulse-pounding gameplay and cutting-edge play-to-earn ecosystem, Ether Surfers is the
                             perfect choice for gamers looking to turn their passion into profit. Download the app and
                             join the revolution today.</p>
-                        <!-- <div class = "d-flex">
-                            <img src="./assets/img/google-play-icon-download-23.jpg" class = "mr-4" style = "width: 250px; height: auto;" alt="">
-                            <img src="./assets/img/app-store.jpg" style = "width: 250px; height: auto;" alt="">
-                        </div> -->
+                        <div class = "d-flex play-btns">
+                            <img src="./assets/img/google play.webp" class = "img-fluid mr-2" alt="">
+                            <img src="./assets/img/app store.webp" class = "img-fluid" alt="">
+                        </div>
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <!-- <img src="./assets/img/Ellipse 5.svg" style="position: absolute; right: -30%;z-index: 1;" alt=""> -->
-                    <img src="./assets/img/mockup.svg" style="width: 100%; height: auto;" alt=""></a>
+                    <img src="./assets/img/mockup.svg" style="width: 100%; height: auto;" class = "mt-5" alt=""></a>
 
                 </div>
             </div>
