--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <img src="./assets/img/boy.svg" class="img-fluid mb-5 boy-img">
                     </div>
                     <div class="col-lg-6 d-flex align-items-center justify-content-center order-md-1">
-                        <div class="hero-main">
+                        <div class="hero-main mt-2">
                             <div class="text-center">
                                 <img src="./assets/img/logo.png" style="width: 50%; margin-top: -80px;" alt="">
                             </div>
@@ -179,7 +179,7 @@
         </div>
     </section>
 
-    <section class="principles" style=" background: #530f70; padding: 100px 0">
+    <section class="principles" style=" background: #530f70; padding: 150px 0">
         <div class="principles__container content-container">
             <h1 class="text-center text-white card-head">Revolutionize your gaming experience with Surfer Ecosystem
             </h1>
