--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <ul class="navbar-nav mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a href="./contact.html">
-                                <button type="button" class="px-2 text-white btn btn-warning">
+                                <button type="button" class="px-2 text-white btn btn-warning buy-btn">
                                     Buy Now
                                 </button>
                             </a>
@@ -114,8 +114,8 @@
     </header>
 
     <section id="card" class="cardpage" style=" background: #530f70;padding-bottom: 100px">
-        <div class=" container">
-            <h1 class="text-center text-white card-head">Revolutionize your gaming experience with Subway Ecosystem
+        <div class="container">
+            <h1 class="text-center text-white card-head">Revolutionize your gaming experience with Surfer Ecosystem
             </h1>
             <div class="row">
                 <div class="col-lg-6 py-3">
@@ -180,7 +180,7 @@
     </section>
 
     <section class="principles" style=" background: #530f70; padding: 150px 0">
-        <div class="principles__container content-container">
+        <div class="principles__container content-container container">
             <h1 class="text-center text-white card-head">Revolutionize your gaming experience with Surfer Ecosystem
             </h1>
             <div class="principles__scroll mt-5">
