--- a/index.html
+++ b/index.html
@@ -233,15 +233,20 @@
                             pulse-pounding gameplay and cutting-edge play-to-earn ecosystem, Ether Surfers is the
                             perfect choice for gamers looking to turn their passion into profit. Download the app and
                             join the revolution today.</p>
-                        <div class = "d-flex play-btns">
-                            <img src="./assets/img/google play.webp" class = "img-fluid mr-2" alt="">
-                            <img src="./assets/img/app store.webp" class = "img-fluid" alt="">
+                        <div class="d-flex play-btns">
+                            <a href="https://play.google.com/store/apps/details?id=com.EtherSurferLeaderBoard"
+                                target="_blank">
+                                <img src="./assets/img/google play.webp" class="img-fluid mr-2" alt="">
+                            </a>
+                            <a href="#">
+                                <img src="./assets/img/app store.webp" class="img-fluid" alt="">
+                            </a>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <!-- <img src="./assets/img/Ellipse 5.svg" style="position: absolute; right: -30%;z-index: 1;" alt=""> -->
-                    <img src="./assets/img/mockup.svg" style="width: 100%; height: auto;" class = "mt-5" alt=""></a>
+                    <img src="./assets/img/mockup.svg" style="width: 100%; height: auto;" class="mt-5" alt=""></a>
 
                 </div>
             </div>
