--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 d-flex align-items-center">
-                    <div style="margin-top: 50px;">
+                    <div>
                         <h1 class="sec-head playnowHeading">
                             Download for free from PlayStore and AppStore!</h1>
                         <p class="playnowContent mt-5 mb-5">Discover a new level of gaming excitement with Ether
@@ -236,18 +236,16 @@
                         <div class="d-flex play-btns">
                             <a href="https://play.google.com/store/apps/details?id=com.EtherSurferLeaderBoard"
                                 target="_blank">
-                                <img src="./assets/img/google play.webp" class="img-fluid mr-2" alt="">
+                                <img src="./assets/img/google play.webp" class="play-btn mr-2" alt="">
                             </a>
                             <a href="#">
-                                <img src="./assets/img/app store.webp" class="img-fluid" alt="">
+                                <img src="./assets/img/app store.webp" class="play-btn" alt="">
                             </a>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4">
-                    <!-- <img src="./assets/img/Ellipse 5.svg" style="position: absolute; right: -30%;z-index: 1;" alt=""> -->
                     <img src="./assets/img/mockup.svg" style="width: 100%; height: auto;" class="mt-5" alt=""></a>
-
                 </div>
             </div>
         </div>
