--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg py-3 m-0">
+        <nav class="navbar navbar-expand-md py-3 m-0">
             <div class="container">
                 <!-- Container wrapper -->
                 <!-- Navbar brand -->
@@ -74,10 +74,10 @@
         <section id="hero" class="hero-section">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6 order-md-2">
+                    <div class="col-lg-6 col-md-6 order-md-2 d-flex align-items-center">
                         <img src="./assets/img/boy.svg" class="img-fluid mb-5 boy-img">
                     </div>
-                    <div class="col-lg-6 d-flex align-items-center justify-content-center order-md-1">
+                    <div class="col-lg-6 col-md-6 d-flex align-items-center justify-content-center order-md-1">
                         <div class="hero-main mt-2">
                             <div class="text-center">
                                 <img src="./assets/img/logo.png" style="width: 50%; margin-top: -80px;" alt="">
@@ -118,7 +118,7 @@
             <h1 class="text-center text-white card-head">Revolutionize your gaming experience with Surfer Ecosystem
             </h1>
             <div class="row">
-                <div class="col-lg-6 py-3">
+                <div class="col-lg-6 col-md-6 py-3">
                     <div class="cardd">
                         <div>
                             <h6 class="cardd-heading">Play-to-earn</h6>
@@ -133,7 +133,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 py-3">
+                <div class="col-lg-6 col-md-6 py-3">
                     <div class="cardd">
                         <div>
                             <h6 class="cardd-heading">Staking Rewards</h6>
@@ -146,7 +146,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 py-3">
+                <div class="col-lg-6 col-md-6 py-3">
                     <div class="cardd">
                         <div>
                             <h6 class="cardd-heading">NFTs & Marketplace</h6>
@@ -160,7 +160,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 py-3">
+                <div class="col-lg-6 col-md-6 py-3">
                     <div class="cardd">
                         <div>
                             <h6 class="cardd-heading">Multichain Bridge</h6>
@@ -224,7 +224,7 @@
         <img src="./assets/img/wavey.png" class="wavey-img" alt="">
         <div class="container">
             <div class="row">
-                <div class="col-lg-8 d-flex align-items-center">
+                <div class="col-lg-8 col-md-8 d-flex align-items-center">
                     <div>
                         <h1 class="sec-head playnowHeading">
                             Download for free from PlayStore and AppStore!</h1>
@@ -244,7 +244,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-4">
                     <img src="./assets/img/mockup.svg" style="width: 100%; height: auto;" class="mt-5" alt=""></a>
                 </div>
             </div>
@@ -311,21 +311,23 @@
         <div class="container">
             <h1 class="sec-head text-white">Tokenomics</h1>
             <div class="row">
-                <div class="d-flex flex-column col-lg-3 justify-content-lg-around">
+                <div class="col-lg-3 col-md-3 d-flex align-items-center">
                     <div>
-                        <h3 class="totalSupply">Total Supply</h3>
-                        <h4 class="tokenAmount">1,000,000,000</h4>
-                    </div>
-                    <div>
-                        <h3 class="totalSupply" ">Total Supply</h3>
-       <h4 class=" tokenAmount">1,000,000,000</h4>
+                        <div>
+                            <h3 class="totalSupply">Total Supply</h3>
+                            <h4 class="tokenAmount">1,000,000,000</h4>
+                        </div>
+                        <div class = "mt-5">
+                            <h3 class="totalSupply">Total Supply</h3>
+                            <h4 class="tokenAmount">1,000,000,000</h4>
+                        </div>
                     </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-md-6">
                     <img src="./assets/img/Tokenomics.svg" class="img-fluid mt-5" alt=""></a>
 
                 </div>
-                <div class="col-lg-3 d-flex align-items-center">
+                <div class="col-lg-3 col-md-3 d-flex align-items-center">
                     <div>
                         <div class="toke-item">
                             <h3 class="totalSupply">Total Supply</h3>
@@ -354,7 +356,7 @@
     <footer style="padding: 50px 0 0 0; background: #01B3E2; color: #fff;">
         <div class="container">
             <div class="row px-4">
-                <div class="col-lg-8">
+                <div class="col-lg-8 col-md-8">
                     <h5>Community</h5>
                     <p class="w-50">Together with other DeFi products Ether Surfer will truly be a demand for gamers</p>
                     <div class="d-flex">
@@ -364,7 +366,7 @@
                         <i class="fa fa-pinterest mr-3"></i>
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-4">
                     <h5>Resources</h5>
                     <ul style="list-style-type: none;">
                         <li>Documentation</li>
@@ -375,7 +377,7 @@
             </div>
             <hr>
             <div class="px-4" style="display: flex; justify-content: space-between;">
-                <img src="./assets/img/logo.png" style="width: 50px; height: auto;" alt="">
+                <img src="./assets/img/logo.png" class = "mr-2" style="width: 50px; height: auto;" alt="">
                 <span>&copy; Ether Surfers. All rights reserved</span>
             </div>
         </div>
