--- a/index.html
+++ b/index.html
@@ -89,8 +89,10 @@
                                 Leaderboards Today!</p>
                             <button class="btn btn-light mt-3 mark-btn" style="color: #79007E">Telegram<span
                                     class="pull-right"><i class="fa fa-arrow-right"></i></span></button><br />
-                            <button class="btn btn-warning mt-3 mark-btn">Download Now<span class="pull-right"><i
-                                        class="fa fa-arrow-right"></i></span></button><br />
+                            <a href="https://play.google.com/store/apps/details?id=com.EtherSurferLeaderBoard" target="_blank">
+                                <button class="btn btn-warning mt-3 mark-btn">Download Now<span class="pull-right"><i
+                                    class="fa fa-arrow-right"></i></span></button><br />
+                            </a>
                         </div>
                     </div>
                 </div>
