--- a/index.html
+++ b/index.html
@@ -89,9 +89,10 @@
                                 Leaderboards Today!</p>
                             <button class="btn btn-light mt-3 mark-btn" style="color: #79007E">Telegram<span
                                     class="pull-right"><i class="fa fa-arrow-right"></i></span></button><br />
-                            <a href="https://play.google.com/store/apps/details?id=com.EtherSurferLeaderBoard" target="_blank">
+                            <a href="https://play.google.com/store/apps/details?id=com.EtherSurferLeaderBoard"
+                                target="_blank">
                                 <button class="btn btn-warning mt-3 mark-btn">Download Now<span class="pull-right"><i
-                                    class="fa fa-arrow-right"></i></span></button><br />
+                                            class="fa fa-arrow-right"></i></span></button><br />
                             </a>
                         </div>
                     </div>
@@ -314,40 +315,90 @@
         <div class="container">
             <h1 class="sec-head text-white">Tokenomics</h1>
             <div class="row">
-                <div class="col-lg-3 col-md-3 d-flex align-items-center">
+                <div class="col-lg-3 col-md-3 d-flex align-items-center justify-content-center">
                     <div>
-                        <div>
-                            <h3 class="totalSupply">Total Supply</h3>
-                            <h4 class="tokenAmount">1,000,000,000</h4>
-                        </div>
-                        <div class = "mt-5">
-                            <h3 class="totalSupply">Total Supply</h3>
-                            <h4 class="tokenAmount">1,000,000,000</h4>
-                        </div>
+
+                        <h3 class="tokeDesc">Liquidity Pool (80%): 800 million tokens are designated for the liquidity
+                            pool, which supports the game’s economy and ensures there is always a market for buying and
+                            selling SURFER tokens.
+                            Staking Rewards (10%): 100 million tokens are reserved for staking rewards, offering players
+                            the opportunity to earn passive income by staking their tokens within the game.
+                            Beta Testers and Giveaways (5%): 50 million tokens are allocated to early supporters who
+                            participate in beta testing and to promotional giveaways, creating initial engagement and
+                            fostering a dedicated community.
+                            Centralized Exchange Listings and Market Making (3%): 30 million tokens will facilitate the
+                            listing of SURFER tokens on centralized exchanges and provide liquidity, ensuring a stable
+                            market for new and existing players.
+                            Team and Advisors (2%): 20 million tokens are set aside for the team and advisors, locked
+                            for a period to align their interests with the long-term success of the project.</h3>
+
+
+
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-6">
-                    <img src="./assets/img/Tokenomics.svg" class="img-fluid mt-5" alt=""></a>
+                <div class="col-lg-6 col-md-6 d-flex justify-content-center align-items-center">
+                    <img src="./assets/img/Ellipse 11.png" class="img-fluid" alt=""></a>
 
                 </div>
-                <div class="col-lg-3 col-md-3 d-flex align-items-center">
+                <div class="col-lg-3 col-md-3 d-flex align-items-center justify-content-center">
                     <div>
                         <div class="toke-item">
-                            <h3 class="totalSupply">Total Supply</h3>
-                            <h4 class="tokenAmount">1,000,000,000</h4>
+                            <div class="d-flex">
+                                <div class="d-flex justify-content-center pr-3">
+                                    <span class="tokeDot mt-2" style = "background: #F8952D"></span>
+                                </div>
+                                <div style="flex: 1">
+                                    <h3 class="totalSupply">Liquidity Pool (80%)</h3>
+                                    <h4 class="tokenAmount">800 million</h4>
+                                </div>
+                            </div>
                         </div>
                         <div class="toke-item">
-                            <h3 class="totalSupply">Total Supply</h3>
-                            <h4 class="tokenAmount">1,000,000,000</h4>
+                            <div class="d-flex">
+                                <div class="d-flex justify-content-center pr-3">
+                                    <span class="tokeDot mt-2" style = "background: #01B3E2"></span>
+                                </div>
+                                <div style="flex: 1">
+                                    <h3 class="totalSupply">Staking Rewards (10%)</h3>
+                                    <h4 class="tokenAmount">100 million</h4>
+                                </div>
+                            </div>
                         </div>
                         <div class="toke-item">
-                            <h3 class="totalSupply">Total Supply</h3>
-                            <h4 class="tokenAmount">1,000,000,000</h4>
+                            <div class="d-flex">
+                                <div class="d-flex justify-content-center pr-3">
+                                    <span class="tokeDot mt-2" style = "background: #F48067"></span>
+                                </div>
+                                <div style="flex: 1">
+                                    <h3 class="totalSupply">Beta Testers and Giveaways (5%)</h3>
+                                    <h4 class="tokenAmount">50 million</h4>
+                                </div>
+                            </div>
                         </div>
 
                         <div class="toke-item">
-                            <h3 class="totalSupply">Total Supply</h3>
-                            <h4 class="tokenAmount">1,000,000,000</h4>
+                            <div class="d-flex">
+                                <div class="d-flex justify-content-center pr-3">
+                                    <span class="tokeDot mt-2" style = "background: #CA7ADD"></span>
+                                </div>
+                                <div style="flex: 1">
+                                    <h3 class="totalSupply">Centralised Exchange
+                                        Listings and Market Making (3%)</h3>
+                                    <h4 class="tokenAmount">30 million</h4>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="toke-item">
+                            <div class="d-flex">
+                                <div class="d-flex justify-content-center pr-3">
+                                    <span class="tokeDot mt-2" style = "background: #01B3E2"></span>
+                                </div>
+                                <div style="flex: 1">
+                                    <h3 class="totalSupply">Team & Advisors (2%)</h3>
+                                    <h4 class="tokenAmount">20 million</h4>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -380,7 +431,7 @@
             </div>
             <hr>
             <div class="px-4" style="display: flex; justify-content: space-between;">
-                <img src="./assets/img/logo.png" class = "mr-2" style="width: 50px; height: auto;" alt="">
+                <img src="./assets/img/logo.png" class="mr-2" style="width: 50px; height: auto;" alt="">
                 <span>&copy; Ether Surfers. All rights reserved</span>
             </div>
         </div>
