--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="./xnetwork.html" class="px-3 pt-2 btn-link">
+                            <a href="https://ether-surfers.gitbook.io/ether-surfers-whitepaper/" target = "_blank" class="px-3 pt-2 btn-link">
                                 Resources
                             </a>
                         </li>
@@ -315,25 +315,16 @@
         <div class="container">
             <h1 class="sec-head text-white">Tokenomics</h1>
             <div class="row">
-                <div class="col-lg-3 col-md-3 d-flex align-items-center justify-content-center">
+                <div class="col-lg-3 col-md-3 d-flex align-items-center">
                     <div>
-
-                        <h3 class="tokeDesc">Liquidity Pool (80%): 800 million tokens are designated for the liquidity
-                            pool, which supports the game’s economy and ensures there is always a market for buying and
-                            selling SURFER tokens.
-                            Staking Rewards (10%): 100 million tokens are reserved for staking rewards, offering players
-                            the opportunity to earn passive income by staking their tokens within the game.
-                            Beta Testers and Giveaways (5%): 50 million tokens are allocated to early supporters who
-                            participate in beta testing and to promotional giveaways, creating initial engagement and
-                            fostering a dedicated community.
-                            Centralized Exchange Listings and Market Making (3%): 30 million tokens will facilitate the
-                            listing of SURFER tokens on centralized exchanges and provide liquidity, ensuring a stable
-                            market for new and existing players.
-                            Team and Advisors (2%): 20 million tokens are set aside for the team and advisors, locked
-                            for a period to align their interests with the long-term success of the project.</h3>
-
-
-
+                        <div>
+                            <h3 class="totalSupply">Total Supply</h3>
+                            <h4 class="tokenAmount">1,000,000,000</h4>
+                        </div>
+                        <div class = "mt-5">
+                            <h3 class="totalSupply">Total Tax</h3>
+                            <h4 class="tokenAmount">5%</h4>
+                        </div>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 d-flex justify-content-center align-items-center">
