--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="collapse navbar-collapse text-white" id="navbarText">
                     <ul class="navbar-nav me-auto mx-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a href="/" class="px-3 pt-2 btn-link">
+                            <a href="#card" class="px-3 pt-2 btn-link">
                                 Ecosystem
                             </a>
                         </li>
@@ -42,12 +42,12 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="./nft.html" class="px-3 pt-2 btn-link">
+                            <a href="#roadmap" class="px-3 pt-2 btn-link">
                                 Roadmap
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="./nft.html" class="px-3 pt-2 btn-link">
+                            <a href="#tokenomics" class="px-3 pt-2 btn-link">
                                 Tokenomics
                             </a>
                         </li>
@@ -404,19 +404,14 @@
                 <div class="col-lg-8 col-md-8">
                     <h5>Community</h5>
                     <p class="w-50">Together with other DeFi products Ether Surfer will truly be a demand for gamers</p>
-                    <div class="d-flex">
-                        <i class="fa fa-facebook mr-3"></i>
-                        <i class="fa fa-twitter mr-3"></i>
-                        <i class="fa fa-instagram mr-3"></i>
-                        <i class="fa fa-pinterest mr-3"></i>
-                    </div>
                 </div>
                 <div class="col-lg-4 col-md-4">
                     <h5>Resources</h5>
                     <ul style="list-style-type: none;">
                         <li>Documentation</li>
                         <li>Whitepaper</li>
-                        <li>Media Kit</li>
+                        <li><a href="https://x.com/ethersurfers">Twitter</a></li>
+                        <li><a href="https://t.me/ethersurfer">Telegram</a></li>
                     </ul>
                 </div>
             </div>
