--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="./nft.html" class="px-3 pt-2 btn-link">
-                                Socials
+                            <a href="https://x.com/ethersurfers" class="px-3 pt-2 btn-link">
+                                Twitter
                             </a>
                         </li>
                     </ul>
@@ -87,8 +87,10 @@
                                 The Ultimate Gaming Adventure!</h5>
                             <p class="text-white top-desc">Experience Thrilling Gameplay, Earn Real Money, and Top the
                                 Leaderboards Today!</p>
-                            <button class="btn btn-light mt-3 mark-btn" style="color: #79007E">Telegram<span
-                                    class="pull-right"><i class="fa fa-arrow-right"></i></span></button><br />
+                            <a href = "https://t.me/ethersurfer" target = "_blank">
+                                <button class="btn btn-light mt-3 mark-btn" style="color: #79007E">Telegram<span
+                                    class="pull-right"><i class="fa fa-arrow-right"></i></span></button>
+                            </a><br />
                             <a href="https://play.google.com/store/apps/details?id=com.EtherSurferLeaderBoard"
                                 target="_blank">
                                 <button class="btn btn-warning mt-3 mark-btn">Download Now<span class="pull-right"><i
