--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
                                 The Ultimate Gaming Adventure!</h5>
                             <p class="text-white top-desc">Experience Thrilling Gameplay, Earn Real Money, and Top the
                                 Leaderboards Today!</p>
+                            <p style = "word-break: break-all;" class="top-desc text-white">Contract Address: 0x4552bf305b913927d045976ab3f39a3681e212cd</p>
                             <a href = "https://t.me/ethersurfer" target = "_blank">
                                 <button class="btn btn-light mt-3 mark-btn" style="color: #79007E">Telegram<span
                                     class="pull-right"><i class="fa fa-arrow-right"></i></span></button>
